@@ -2,6 +2,17 @@
 
         Reviewed by Lars.
 
+        Moved the WebCore::Image specific function loadResourcePixmap from qwebsettings.cpp to ImageQt.cpp and made it static.
+
+        WARNING: NO TEST CASES ADDED OR CHANGED
+
+        * platform/graphics/qt/ImageQt.cpp:
+        (loadResourcePixmap):
+
+2007-11-07  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Lars.
+
         Restructure the context menu classes for the Qt port. ContextMenu and ContextMenuItem don't store
         QActions/QMenus anymore but just store the action type, tag, title and optionally submenu as created
         in ContextMenu::populate().
